# autopool

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
.github/: environment-ci.yml
.github/workflows/: ci.yml
autopool/: __init__.py  autopool.py  keras.py  tf.py  version.py
docs/: Makefile  api.rst  conf.py  definitions.rst  examples.rst  index.rst  installation.rst  make.bat
pytorch/: autopool.py
tests/: test_keras.py  test_tf.py
