[pycodestyle]
max-line-length=119

[tool:pytest]
addopts = --cov-report term-missing --cov autopool --cov-report=xml
xfail_strict = true
filterwarnings =
    ignore:Using a non-tuple sequence:FutureWarning:scipy.*


[coverage:report]
omit =
    */python?.?/*


[metadata]
name = autopool
version = attr: autopool.version.version
description = Adaptive pooling operators for multiple instance learning
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/marl/autopool
author = MARL
author_email = brian.mcfee@nyu.edu
license = ISC
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
project_urls = 
    Source = https://github.com/marl/autopool
    Download = https://github.com/marl/autopool/releases
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >= 3.6

[options.extras_require]
docs  =
    numpydoc
    sphinx
    sphinx-gallery
tests = 
    pytest
    pytest-cov
    keras >= 2.2
    tensorflow >= 2.0
keras = 
    keras >= 2.2
tf = 
    tensorflow >= 2.0
all =
    keras >= 2.2
    tensorflow >= 2.0
